--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,6 +29,7 @@
     <color name="trans_wheat_tone">#AEB3AD8E</color>
     <color name="trans_blackberry">#A971617C</color>
     <color name="trans_tone_blackberry">#201F21</color>
+    <color name="trans1_tone_blackberry">#A7201F21</color>
     <color name="solid_grey_white">#EAE4E8EC</color>
     <color name="trans_tint_neutralBlue">#43D1F1F5</color>
     <color name="light_trans_tint_neuBlue">#21538294</color>
