--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -103,7 +103,7 @@
             tools:ignore="TouchTargetSizeCheck" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/signup"
             android:layout_width="200sp"
             android:layout_height="40sp"
             android:layout_marginTop="10sp"
