--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/parfait"
     android:backgroundTintMode="src_over"
     android:layout_margin="10dp"
-    tools:context=".Login">
+    tools:context=".LoginActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
