--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -8,7 +8,7 @@
     android:backgroundTint="#60FFFFFF"
     android:backgroundTintMode="src_atop"
     android:layout_margin="10dp"
-    tools:context=".Registration">
+    tools:context=".RegistrationActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -40,7 +40,7 @@
             android:textSize="15sp" />
 
         <EditText
-            android:id="@+id/editTextEmailAddress"
+            android:id="@+id/emailAddress"
             android:layout_width="300sp"
             android:layout_height="50sp"
             android:layout_marginTop="30sp"
@@ -48,15 +48,15 @@
             android:background="@drawable/textfield_shape"
             android:ems="10"
             android:fontFamily="@font/amaranth"
-            android:gravity="top"
+            android:gravity="center_vertical"
             android:hint="@string/email_hint"
             android:inputType="textEmailAddress"
             android:paddingStart="5sp"
             android:paddingTop="3sp"
             android:paddingEnd="5sp"
-            android:text="@string/email_address"
+            android:text=""
             android:textColor="@color/shadeGreyBlue"
-            android:textSize="12sp"
+            android:textSize="20sp"
             app:backgroundTint="@null"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -71,14 +71,15 @@
             android:background="@drawable/textfield_shape"
             android:ems="10"
             android:fontFamily="@font/amaranth"
-            android:gravity="top"
+            android:gravity="center_vertical"
             android:hint="@string/password_hint"
             android:inputType="textPassword"
             android:paddingStart="5sp"
             android:paddingTop="3sp"
             android:paddingEnd="5sp"
+            android:text=""
             android:textColorHint="@color/shadeGreyBlue"
-            android:textSize="12sp"
+            android:textSize="20sp"
             app:backgroundTint="@null"
             tools:ignore="TouchTargetSizeCheck" />
 
@@ -90,15 +91,16 @@
             android:background="@drawable/textfield_shape"
             android:ems="10"
             android:fontFamily="@font/amaranth"
-            android:gravity="top"
+            android:gravity="center_vertical"
             android:hint="@string/confirmation_hint"
+            android:text=""
             android:autofillHints="confirm password"
             android:inputType="textPassword"
             android:paddingStart="5sp"
             android:paddingEnd="5sp"
             android:paddingTop="3sp"
             android:textColorHint="@color/shadeGreyBlue"
-            android:textSize="12sp"
+            android:textSize="20sp"
             app:backgroundTint="@null"
             tools:ignore="TouchTargetSizeCheck" />
 
@@ -110,6 +112,20 @@
             android:background="@drawable/btn_shape3"
             android:fontFamily="@font/amaranth"
             android:text="@string/sign_up"
+            android:textColor="@color/white"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="TouchTargetSizeCheck" />
+        <Button
+            android:id="@+id/login"
+            android:layout_width="200sp"
+            android:layout_height="40sp"
+            android:layout_marginTop="10sp"
+            android:backgroundTint="@null"
+            android:background="@drawable/btn_shape2"
+            android:fontFamily="@font/amaranth"
+            android:text="@string/login"
             android:textColor="@color/white"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
