--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -48,7 +48,7 @@
             android:background="@drawable/textfield_shape"
             android:ems="10"
             android:fontFamily="@font/amaranth"
-            android:gravity="center_vertical"
+            android:gravity="center"
             android:hint="@string/email_hint"
             android:inputType="textEmailAddress"
             android:paddingStart="5sp"
@@ -71,7 +71,7 @@
             android:background="@drawable/textfield_shape"
             android:ems="10"
             android:fontFamily="@font/amaranth"
-            android:gravity="center_vertical"
+            android:gravity="center"
             android:hint="@string/password_hint"
             android:inputType="textPassword"
             android:paddingStart="5sp"
@@ -91,7 +91,7 @@
             android:background="@drawable/textfield_shape"
             android:ems="10"
             android:fontFamily="@font/amaranth"
-            android:gravity="center_vertical"
+            android:gravity="center"
             android:hint="@string/confirmation_hint"
             android:text=""
             android:autofillHints="confirm password"
