--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -35,4 +35,5 @@
     <color name="light_trans_tint_neuBlue">#21538294</color>
     <color name="trans_denim_blue">#E02785A8</color>
     <color name="trans_denim_tone">#AF3D849E</color>
+    <color name="super_transGreyViolet">#61BCCDE7</color>
 </resources>
