--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
     android:background="@drawable/coffee_with_plate2"
-    android:layout_margin="10dp"
-    >
+    tools:context=".MainActivity">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/linearLayout2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="10dp"
-        tools:layout_editor_absoluteX="88dp"
-        tools:layout_editor_absoluteY="22dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/Welcome"
@@ -25,12 +25,11 @@
             android:layout_height="wrap_content"
 
             android:layout_marginTop="-60sp"
+            android:fontFamily="@font/amaranth"
             android:gravity="center"
             android:text="@string/welcome"
-            android:fontFamily="@font/amaranth"
             android:textColor="@color/white"
             android:textSize="60sp" />
-
 
         <TextView
             android:id="@+id/getstarted"
@@ -49,14 +48,13 @@
             android:layout_width="200dp"
             android:layout_height="40dp"
             android:layout_marginTop="20dp"
-            android:textSize="15sp"
-            android:gravity="center"
-            android:fontFamily="@font/vollkorn_semibold"
-            android:text="@string/login"
             android:background="@drawable/btn_shape3"
+            android:fontFamily="@font/vollkorn_semibold"
+            android:gravity="center"
+            android:text="@string/login"
             android:textColor="@color/white"
+            android:textSize="15sp"
             tools:ignore="TouchTargetSizeCheck" />
-
 
 
         <Button
@@ -64,13 +62,13 @@
             android:layout_width="200dp"
             android:layout_height="40dp"
             android:layout_marginTop="15dp"
-            app:backgroundTint="@null"
-            android:textSize="15sp"
-            android:gravity="center"
             android:background="@drawable/btn_shape4"
             android:fontFamily="@font/vollkorn_semibold"
+            android:gravity="center"
             android:text="@string/sign_up"
             android:textColor="@color/shadeDeepGreyBlue"
+            android:textSize="15sp"
+            app:backgroundTint="@null"
             tools:ignore="TouchTargetSizeCheck" />
 
 
