--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -35,4 +35,8 @@
     <color name="light_trans_tint_neuBlue">#21538294</color>
     <color name="trans_denim_blue">#E02785A8</color>
     <color name="trans_denim_tone">#AF3D849E</color>
+    <color name="holo_green_light">#FF99CC00</color>
+    <color name="holo_red_light">#FFFF4444</color>
+    <color name="sixty_opacity_white">#8CFFFFFF</color>
+    <color name="amount_btn_col">#2785A8</color>
 </resources>
