Problem with colors

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -49,7 +49,8 @@
         android:background="@drawable/btn_shape5"
         android:fontFamily="@font/amaranth"
         android:textSize="11sp"
-        tools:ignore="TouchTargetSizeCheck">
+        tools:ignore="TouchTargetSizeCheck"
+        android:layout_marginTop="5dp">
 
     </Button>
 
