--- a/app/src/main/res/menu/toolbar_for_display_profile.xml
+++ b/app/src/main/res/menu/toolbar_for_display_profile.xml
@@ -4,12 +4,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:visible="true"
    >
-
     <item
-        android:id="@+id/profile"
-        android:title="@string/profile"
-        app:showAsAction="never">
-    </item>
+        android:id="@+id/updateProfile"
+        android:title="@string/update_profile"
+        app:showAsAction="never"/>
 
     <item
         android:id="@+id/logout"
