--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    >
 
     <EditText
         android:id="@+id/editTextItem"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="300sp"
+        android:layout_height="50dp"
+        android:layout_gravity="center_horizontal"
         android:hint="Enter item to search"/>
 
     <Button
@@ -40,4 +41,4 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/buttonSearch"/>
-</RelativeLayout>
+</LinearLayout>
