--- a/app/src/main/res/layout/activity_water_add.xml
+++ b/app/src/main/res/layout/activity_water_add.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:backgroundTintMode="src_over"
     app:layout_constraintGuide_percent="0.5">
 
     <androidx.appcompat.widget.Toolbar
