--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@drawable/icecubes"
+
     >
+<TextView
+    android:id="@+id/fridge"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="@string/Fridge"
+    android:textSize="40sp"
+    />
 
     <EditText
         android:id="@+id/editTextItem"
@@ -10,12 +20,17 @@
         android:layout_height="50dp"
         android:layout_gravity="center_horizontal"
         android:hint="Enter item to search"/>
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="40sp"
+    android:layout_marginTop="40sp"
+    android:layout_gravity="center_vertical"
+    android:orientation="horizontal">
 
     <Button
         android:id="@+id/buttonSearch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/editTextItem"
         android:onClick="onSearchClicked"
         android:text="Search" />
 
@@ -23,10 +38,13 @@
         android:id="@+id/buttonAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@id/editTextItem"
         android:onClick="onAddClicked"
         android:text="Add Product" />
+
+
+
+</LinearLayout>
+
 
     <Button
         android:id="@+id/btnCamera"
