--- a/app/src/main/res/layout/activity_fooddetails.xml
+++ b/app/src/main/res/layout/activity_fooddetails.xml
@@ -6,15 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".foodDetails">
 
-    <!-- Repeat the pattern for other nutrient fields (fat, carbs, protein, sodium, potassium) -->
-
     <TextView
         android:id="@+id/carbs_TextView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="2dp"
         android:layout_marginEnd="3dp"
-        android:layout_marginBottom="19dp"
+        android:layout_marginBottom="20dp"
         android:text="Carbohydrates:"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/fat_TextView"
@@ -55,11 +53,10 @@
         android:layout_height="0dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="522dp"
         android:gravity="center"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/editButton"
+        app:layout_constraintBottom_toTopOf="@+id/gramsEdit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -80,21 +77,21 @@
 
     <TextView
         android:id="@+id/potassium_TextView"
-        android:layout_width="0dp"
+        android:layout_width="214dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="170dp"
+        android:layout_marginBottom="23dp"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/submitButton"
-        app:layout_constraintEnd_toStartOf="@+id/gramsEdit"
-        app:layout_constraintStart_toStartOf="@+id/itemGrams"
+        app:layout_constraintBottom_toTopOf="@+id/editButton"
+        app:layout_constraintEnd_toStartOf="@+id/editButton"
+        app:layout_constraintStart_toStartOf="@+id/editButton"
         app:layout_constraintTop_toBottomOf="@+id/sodium_TextView" />
 
     <TextView
         android:id="@+id/itemGrams"
-        android:layout_width="205dp"
+        android:layout_width="0dp"
         android:layout_height="43dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="9dp"
+        android:layout_marginStart="14dp"
+        android:layout_marginEnd="4dp"
         android:text="Serving size in grams:"
         android:textSize="18sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/gramsEdit"
@@ -103,26 +100,28 @@
 
     <TextView
         android:id="@+id/meal_TextView"
-        android:layout_width="154dp"
-        android:layout_height="38dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="14dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="19dp"
         android:text="Meal:"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/calories_TextView"
+        app:layout_constraintEnd_toEndOf="@+id/calories_TextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/gramsEdit" />
 
     <Button
         android:id="@+id/submitButton"
-        android:layout_width="172dp"
-        android:layout_height="55dp"
+        android:layout_width="175dp"
+        android:layout_height="49dp"
         android:layout_marginBottom="33dp"
         android:text="Submit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/potassium_TextView" />
+        app:layout_constraintTop_toBottomOf="@+id/deleteButton" />
 
     <TextView
         android:id="@+id/protein_TextView"
@@ -130,7 +129,7 @@
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="26dp"
-        android:layout_marginBottom="18dp"
+        android:layout_marginBottom="17dp"
         android:text="Protein"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/carbs_TextView"
@@ -140,9 +139,9 @@
 
     <EditText
         android:id="@+id/gramsEdit"
-        android:layout_width="134dp"
+        android:layout_width="178dp"
         android:layout_height="48dp"
-        android:layout_marginEnd="52dp"
+        android:layout_marginEnd="32dp"
         android:layout_marginBottom="24dp"
         android:ems="10"
         android:hint="Enter amount"
@@ -154,13 +153,24 @@
 
     <Button
         android:id="@+id/editButton"
-        android:layout_width="171dp"
+        android:layout_width="170dp"
         android:layout_height="51dp"
-        android:layout_marginBottom="109dp"
+        android:layout_marginBottom="28dp"
         android:text="Edit"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/deleteButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/indItemName" />
+        app:layout_constraintTop_toBottomOf="@+id/potassium_TextView" />
+
+    <Button
+        android:id="@+id/deleteButton"
+        android:layout_width="171dp"
+        android:layout_height="53dp"
+        android:layout_marginBottom="16dp"
+        android:text="Delete"
+        app:layout_constraintBottom_toTopOf="@+id/submitButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
