--- a/app/src/main/res/drawable/typedrink_btn_bg.xml
+++ b/app/src/main/res/drawable/typedrink_btn_bg.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FF33B5E5"/>
+    <solid android:color="@color/greyBlueCool"/>
     <corners android:radius="20dp"/>
 </shape>
