--- a/app/src/main/res/layout/activity_water_add.xml
+++ b/app/src/main/res/layout/activity_water_add.xml
@@ -11,9 +11,10 @@
         android:id="@+id/toolbar_add_water"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="#2785A8"
+        android:background="?attr/colorPrimary"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:title="Add Water"/>
 
 
     <ImageView
@@ -154,7 +155,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/delete_btn"
         android:layout_marginTop="20dp"
-        android:layout_marginLeft="110dp"/>
+        android:layout_marginLeft="110dp"
+        />
 
     <ImageView
         android:id="@+id/delete_btn"
